--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "sharp": "^0.34.1",
     "sugar-high": "^0.8.1",
     "tailwind-merge": "^2.3.0",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
