--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@payloadcms/richtext-lexical": "^3.35.1",
     "@payloadcms/storage-vercel-blob": "^3.35.1",
     "@payloadcms/ui": "^3.35.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
@@ -38,9 +41,11 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
+    "cross-env": "^7.0.3",
     "feed": "^4.2.2",
     "graphql": "^16.10.0",
     "katex": "^0.16.20",
+    "lucide-react": "^0.507.0",
     "mongodb": "^6.16.0",
     "next": "15.3.0",
     "next-mdx-remote": "^5.0.0",
@@ -48,8 +53,9 @@
     "next-themes": "^0.4.4",
     "payload": "^3.35.1",
     "prism-react-renderer": "^2.4.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "7.45.4",
     "react-icons": "^5.4.0",
     "react-tweet": "^3.2.1",
     "react-wrap-balancer": "^1.1.1",
@@ -59,8 +65,7 @@
     "sharp": "^0.34.1",
     "sugar-high": "^0.8.1",
     "tailwind-merge": "^2.3.0",
-    "typescript": "5.7.3",
-    "cross-env": "^7.0.3"
+    "typescript": "5.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
