--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.45.4",
     "react-icons": "^5.4.0",
+    "react-share": "^5.2.2",
     "react-tweet": "^3.2.1",
     "react-wrap-balancer": "^1.1.1",
     "react-youtube": "^10.1.0",
