--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
     "payload": "^3.35.1",
+    "payloadcms-lexical-ext": "^0.5.3",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
